--- a/css/style-red.css
+++ b/css/style-red.css
@@ -611,7 +611,7 @@ a:hover {
   position: absolute;
 }
 
-.intro .overlay-itro {
+/* .intro .overlay-itro {
   background-color: rgba(0, 0, 0, 0.6);
   position: absolute;
   top: 0;
@@ -620,7 +620,7 @@ a:hover {
   height: 100%;
   width: 100%;
   opacity: .9;
-}
+} */
 
 .intro .intro-title {
   color: #fff;
@@ -667,6 +667,22 @@ a:hover {
   color: #fff;
 }
 
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  opacity: 1;
+  overflow: hidden;
+}
+
+.bg-video__content {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
 /*======================================
 //--//-->   ABOUT
 ======================================*/
